# medical-rag-chatbot

./: .gitignore  Dockerfile.app  README.md  docker-compose.yml  pyproject.toml  run_all.ps1
app/: api.py  main.py  schemas.py  streamlit_app.py
app/integrations/: drive_ingest.py  google_drive.py
app/memory/: session_store.py  store.py  utils.py
app/rag/: chunking.py  functions.py  ingest.py  llm.py  planner.py  prompt.py  retriever.py  test.py  test_drive_access.py  utils.py
app/rag/loaders/: docx_loader.py  excel_loader.py  pdf_loader.py
app/report/: assembler.py  docling_converter.py  executor.py  extractor.py  figure_extractor.py  heading_extractor.py  planner.py  table_extractor.py
app/scripts/: test_docling.py
app/storage/: file_resolver.py
store/: docs.pkl  index.faiss
