[project]
name = "medic-chatbot"
version = "0.1.0"
description = "Medical RAG chatbot"
readme = "README.md"

requires-python = ">=3.10,<3.13"

dependencies = [
    "streamlit==1.31.1",
    "altair==4.2.2",

    "fastapi>=0.110,<1.0",
    "uvicorn>=0.24,<1.0",
    "python-multipart>=0.0.9",

    "sentence-transformers>=2.2,<3.0",
    "faiss-cpu>=1.7,<2.0",

    "pandas>=1.5,<3.0",
    "pdfplumber>=0.10,<1.0",
    "python-docx>=1.1,<2.0",
    "openpyxl>=3.1,<4.0",

    "requests>=2.31,<3.0",

    "google-api-python-client>=2.100,<3.0",
    "google-auth>=2.20,<3.0",
    "google-auth-httplib2>=0.1,<1.0",
]
